--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
   },
   "scripts": {
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "nodemon"
+    "dev": "nodemon app.js"
   },
   "keywords": [],
-  "author" : "",
-  "license" : "src",
+  "author": "",
+  "license": "UNLICENSED",
   "dependencies": {
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "express": "^4.21.0",
     "mysql2": "^3.11.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
