--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
-    "version" : 2,
+    "version": 2,
     "builds": [
         {
-            "src": "./app.js",
+            "src": "app.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
-            "src": "/(.*)",
-            "dest": "/"
+            "src": "/api/(.*)",
+            "dest": "/app.js"
         }
     ]
 }
